Fixes home borders not green on Safari

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -29,6 +29,9 @@
           opacity: 1;
           &:hover, &:focus, &.current-link {
             color: $green;
+            .primary-navigation__home-icon {
+              border-color: $green;
+            }
           }
         }
       }
